--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "cors": "^2.8.5",
     "firebase": "^10.14.1",
+    "firebase-admin": "^13.0.1",
     "hammerjs": "^2.0.8",
     "rxjs": "~7.8.0",
-
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
