--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "firebase": "^10.14.1",
     "firebase-admin": "^13.0.1",
     "hammerjs": "^2.0.8",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.12",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
